Fix `RepeaterItemContainer`: Bump `z-index` for small screens
Fixes hidden boxes while dragging on small screens

--- a/packages/ui/src/components/RepeaterItemContainer/RepeaterItemContainer.sass
+++ b/packages/ui/src/components/RepeaterItemContainer/RepeaterItemContainer.sass
@@ -37,4 +37,4 @@
 	&:focus-within
 		color: var(--cui-control-color)
 		background-image: var(--cui-box-background-focused-overlay)
-		z-index: 1
+		z-index: 3
